# CImg_test_app

./: .gitignore  CMakeLists.txt  README.md
src/: test1.cpp  test2.cpp
